[package]
name = "tcp_frontend"
version = "0.1.0"
authors = ["Pagwin <git@pagwin.xyz>"]
edition = "2018"

[lib]
name = "tcp_frontend"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.*"
tokio = { version = "1.12.*", features = ["net", "rt","rt-multi-thread", "macros"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
futures = "0.3.*"
